// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DebateStepPageFaceToFace /> should renders correctly 1`] = `
<Box
  id="DebateStepPageFaceToFace"
>
  <Heading
    as="h3"
    fontWeight="400"
    mb={6}
  >
    <FormattedMessage
      id="the.face-to-face"
      values={Object {}}
    />
  </Heading>
  <Skeleton
    isLoaded={true}
    placeholder={
      <Flex
        direction={
          Array [
            "column",
            "row",
          ]
        }
        spacing={4}
      >
        <DebateOpinionPlaceholder
          debateOpinionStatus="FOR"
        />
        <DebateOpinionPlaceholder
          debateOpinionStatus="AGAINST"
        />
      </Flex>
    }
  >
    <Flex
      direction={
        Array [
          "column",
          "row",
        ]
      }
      spacing={6}
    >
      <DebateOpinion
        isMobile={false}
        opinion={
          Object {
            "$fragmentRefs": null,
            "body": "Oui",
            "type": "FOR",
          }
        }
        readMore={true}
      />
      <DebateOpinion
        isMobile={false}
        opinion={
          Object {
            "$fragmentRefs": null,
            "body": "Non",
            "type": "AGAINST",
          }
        }
        readMore={true}
      />
    </Flex>
  </Skeleton>
</Box>
`;

exports[`<DebateStepPageFaceToFace /> should renders correctly on mobile 1`] = `
<Box
  id="DebateStepPageFaceToFace"
>
  <Heading
    as="h3"
    fontWeight="400"
    mb={6}
  >
    <FormattedMessage
      id="the.face-to-face"
      values={Object {}}
    />
  </Heading>
  <Skeleton
    isLoaded={true}
    placeholder={
      <Flex
        direction={
          Array [
            "column",
            "row",
          ]
        }
        spacing={4}
      >
        <DebateOpinionPlaceholder
          debateOpinionStatus="FOR"
        />
        <DebateOpinionPlaceholder
          debateOpinionStatus="AGAINST"
        />
      </Flex>
    }
  >
    <Flex
      direction={
        Array [
          "column",
          "row",
        ]
      }
      spacing={6}
    >
      <DebateOpinion
        isMobile={true}
        opinion={
          Object {
            "$fragmentRefs": null,
            "body": "Oui",
            "type": "FOR",
          }
        }
        readMore={true}
      />
      <DebateOpinion
        isMobile={true}
        opinion={
          Object {
            "$fragmentRefs": null,
            "body": "Non",
            "type": "AGAINST",
          }
        }
        readMore={true}
      />
    </Flex>
  </Skeleton>
</Box>
`;

exports[`<DebateStepPageFaceToFace /> should renders correctly when not loaded 1`] = `
<Box
  id="DebateStepPageFaceToFaceLoading"
>
  <Heading
    as="h3"
    fontWeight="400"
    mb={6}
  >
    <FormattedMessage
      id="the.face-to-face"
      values={Object {}}
    />
  </Heading>
  <Skeleton
    isLoaded={false}
    placeholder={
      <Flex
        direction={
          Array [
            "column",
            "row",
          ]
        }
        spacing={4}
      >
        <DebateOpinionPlaceholder
          debateOpinionStatus="FOR"
        />
        <DebateOpinionPlaceholder
          debateOpinionStatus="AGAINST"
        />
      </Flex>
    }
  />
</Box>
`;
